--- a/Spark/View/TableViewHeaderFooter/RosterHeaderView.xib
+++ b/Spark/View/TableViewHeaderFooter/RosterHeaderView.xib
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22690"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,14 +11,45 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="RosterHeaderView" customModule="Spark" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="742" height="260"/>
+            <rect key="frame" x="0.0" y="0.0" width="742" height="715"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fA-E3-s67">
-                    <rect key="frame" x="20" y="15" width="702" height="245"/>
+                <view clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fA-E3-s67">
+                    <rect key="frame" x="20" y="15" width="702" height="700"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gLo-7j-aPY">
+                            <rect key="frame" x="0.0" y="0.0" width="702" height="30"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Traditional Karate hu hu ahhahahaa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="el9-zB-Wvr">
+                                    <rect key="frame" x="10" y="5" width="265.33333333333331" height="20"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="17"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="5:30PM - 6:30PM" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHL-zg-t3e">
+                                    <rect key="frame" x="558" y="5" width="134" height="20"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" name="AccentColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="el9-zB-Wvr" secondAttribute="bottom" constant="5" id="525-oa-5oH"/>
+                                <constraint firstAttribute="trailing" secondItem="AHL-zg-t3e" secondAttribute="trailing" constant="10" id="A89-he-2FK"/>
+                                <constraint firstItem="el9-zB-Wvr" firstAttribute="leading" secondItem="gLo-7j-aPY" secondAttribute="leading" constant="10" id="Lja-lL-pWv"/>
+                                <constraint firstItem="AHL-zg-t3e" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="el9-zB-Wvr" secondAttribute="trailing" constant="5" id="XqE-bJ-Z6x"/>
+                                <constraint firstItem="el9-zB-Wvr" firstAttribute="top" secondItem="gLo-7j-aPY" secondAttribute="top" constant="5" id="kvs-de-TBN"/>
+                                <constraint firstItem="AHL-zg-t3e" firstAttribute="centerY" secondItem="el9-zB-Wvr" secondAttribute="centerY" id="nDz-x3-59p"/>
+                            </constraints>
+                        </view>
+                    </subviews>
                     <color key="backgroundColor" name="ContactListBG"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="245" id="pif-Qc-B0E"/>
+                        <constraint firstAttribute="trailing" secondItem="gLo-7j-aPY" secondAttribute="trailing" id="Uv0-Ze-vOf"/>
+                        <constraint firstItem="gLo-7j-aPY" firstAttribute="top" secondItem="1fA-E3-s67" secondAttribute="top" id="eGN-Hp-GMp"/>
+                        <constraint firstItem="gLo-7j-aPY" firstAttribute="leading" secondItem="1fA-E3-s67" secondAttribute="leading" id="fKP-Um-1oY"/>
+                        <constraint firstAttribute="height" constant="700" id="pif-Qc-B0E"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -35,10 +66,13 @@
                 <constraint firstAttribute="trailing" secondItem="1fA-E3-s67" secondAttribute="trailing" constant="20" id="r2q-ly-hdJ"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="352.67175572519085" y="164.78873239436621"/>
+            <point key="canvasLocation" x="352.67175572519085" y="325"/>
         </view>
     </objects>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.87099999189376831" green="0.3449999988079071" blue="0.27500000596046448" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="ContactListBG">
             <color red="1" green="1" blue="1" alpha="0.80000001192092896" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
