--- a/Spark/View/Storyboard/Base.lproj/AppFlow.storyboard
+++ b/Spark/View/Storyboard/Base.lproj/AppFlow.storyboard
@@ -155,7 +155,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="br0-Tr-f0J">
                                         <rect key="frame" x="302.5" y="15" width="229.5" height="58.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="751" text="Instructor mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Phh-rM-Dln">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Instructor mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Phh-rM-Dln">
                                                 <rect key="frame" x="0.0" y="42.5" width="99.5" height="16"/>
                                                 <fontDescription key="fontDescription" name="Inter-Medium" family="Inter" pointSize="13"/>
                                                 <color key="textColor" name="Text"/>
